# livraria

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_remove_livro_autores_remove_livro_categoria_and_more.py
livraria/models/: categoria.py  editora.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: __init__.py  categoria.py  livro.py
